--- a/production/index.html
+++ b/production/index.html
@@ -8,6 +8,11 @@
     <link href="css/application.css" rel="stylesheet" />
   </head>
   <body>
-    Hello world
+    <div class="container">
+      <p>
+        Hello world
+      </p>
+    </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
