new branch table-slider

--- a/production/index.html
+++ b/production/index.html
@@ -1,13 +1,156 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Test | Test</title>
+    <title>Table slider</title>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" name="viewport" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700,800,800italic,300italic,300" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/application.css" rel="stylesheet" />
   </head>
   <body>
-    Hello world
+    <main>
+        <div class="container">
+            <div class="table-wrapper">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="table-slider">
+                            <div class="table-slider_fixed-column">
+                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
+
+                                </table>
+                            </div>
+                            <div class="table-slider_content">
+                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
+
+                                </table>
+                            </div>
+                        </div>
+                        <div class="table-main-wrapper">
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%" class="table">
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <p><strong>Formats</strong>
+                                            </p>
+                                            <p>Portrait/landscape</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Format size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Hyundai logo width</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Typography</strong>
+                                            </p>
+                                            <p>Minimum sizes in pt.</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Formats</strong>
+                                            </p>
+                                            <p>Portrait/landscape</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Format size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>Skyscraper</td>
+                                        <td>160 × 600</td>
+                                        <td>15</td>
+                                        <td>130</td>
+                                        <td>5</td>
+                                        <td>Skyscraper</td>
+                                        <td>160 × 600</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="table-controls text-right">
+                            <div class="table-previous btn btn-default">Previous</div>
+                            <div class="pagination">
+                                <a href="#" class="pagination-current">1</a> <span> / </span>
+                                <a href="#" class="pagination-total">3</a>
+                            </div>
+                            <div class="table-next btn btn-default">Next</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+    <script scr="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
