--- a/production/index.html
+++ b/production/index.html
@@ -4,7 +4,6 @@
     <title>Table slider</title>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" name="viewport" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700,800,800italic,300italic,300" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/application.css" rel="stylesheet" />
   </head>
@@ -14,7 +13,7 @@
             <div class="table-wrapper">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <div class="table-slider">
+                        <!-- <div class="table-slider">
                             <div class="table-slider_fixed-column">
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 
@@ -25,8 +24,8 @@
 
                                 </table>
                             </div>
-                        </div>
-                        <div class="table-main-wrapper">
+                        </div> -->
+                        <div class="rte_content">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%" class="table">
                                 <tbody>
                                     <tr>
