--- a/production/index.html
+++ b/production/index.html
@@ -13,18 +13,6 @@
             <div class="table-wrapper">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <!-- <div class="table-slider">
-                            <div class="table-slider_fixed-column">
-                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
-
-                                </table>
-                            </div>
-                            <div class="table-slider_content">
-                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
-
-                                </table>
-                            </div>
-                        </div> -->
                         <div class="rte_content">
                             <table border="0" cellpadding="0" cellspacing="0" width="100%" class="table">
                                 <tbody>
@@ -74,11 +62,31 @@
                                             </p>
                                             <p>In pixels</p>
                                         </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
 
                                     </tr>
                                     <tr>
                                         <td>Skyscraper</td>
-                                        <td>160 × 600</td>
+                                        <td>160</td>
                                         <td>15</td>
                                         <td>130</td>
                                         <td>5</td>
@@ -86,6 +94,10 @@
                                         <td>160 × 600</td>
                                         <td>15</td>
                                         <td>15</td>
+                                        <td>Skyscraper</td>
+                                        <td>160 × 600</td>
+                                        <td>15</td>
+                                        <td>15</td>
                                     </tr>
                                     <tr>
                                         <td>Half-page</td>
@@ -97,13 +109,6 @@
                                         <td>300 × 600 </td>
                                         <td>18 </td>
                                         <td>18 </td>
-                                    </tr>
-                                    <tr>
-                                        <td>Half-page</td>
-                                        <td>300 × 600 </td>
-                                        <td>18 </td>
-                                        <td>90 </td>
-                                        <td>8</td>
                                         <td>Half-page</td>
                                         <td>300 × 600 </td>
                                         <td>18 </td>
@@ -119,6 +124,10 @@
                                         <td>300 × 600 </td>
                                         <td>18 </td>
                                         <td>18 </td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
                                     </tr>
                                     <tr>
                                         <td>Half-page</td>
@@ -126,6 +135,25 @@
                                         <td>18 </td>
                                         <td>90 </td>
                                         <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
                                         <td>Half-page</td>
                                         <td>300 × 600 </td>
                                         <td>18 </td>
@@ -133,14 +161,154 @@
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
-                        <div class="table-controls text-right">
-                            <div class="table-previous btn btn-default">Previous</div>
-                            <div class="pagination">
-                                <a href="#" class="pagination-current">1</a> <span> / </span>
-                                <a href="#" class="pagination-total">3</a>
-                            </div>
-                            <div class="table-next btn btn-default">Next</div>
+
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%" class="table">
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <p><strong>Formats</strong>
+                                            </p>
+                                            <p>Portrait/landscape</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Format size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Hyundai logo width</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Typography</strong>
+                                            </p>
+                                            <p>Minimum sizes in pt.</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Formats</strong>
+                                            </p>
+                                            <p>Portrait/landscape</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Format size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+                                        <td>
+                                            <p><strong>Base unit size</strong>
+                                            </p>
+                                            <p>In pixels</p>
+                                        </td>
+
+                                    </tr>
+                                    <tr>
+                                        <td>Skyscraper</td>
+                                        <td>160</td>
+                                        <td>15</td>
+                                        <td>130</td>
+                                        <td>5</td>
+                                        <td>Skyscraper</td>
+                                        <td>160 × 600</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                        <td>Skyscraper</td>
+                                        <td>160 × 600</td>
+                                        <td>15</td>
+                                        <td>15</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Half-pagewdwdwse</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>90 </td>
+                                        <td>8</td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                        <td>Half-page</td>
+                                        <td>300 × 600 </td>
+                                        <td>18 </td>
+                                        <td>18 </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
